--- a/contact.html
+++ b/contact.html
@@ -185,8 +185,8 @@
         <aside class="space-y-5">
           <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
             <h3 class="font-semibold text-slate-900">Call us</h3>
-            <p class="text-slate-700 mt-1">+1 (555) 274-8890</p>
-            <p class="text-slate-500 text-sm">Mon–Fri, 8am–7pm</p>
+            <p class="text-slate-700 mt-1">+1 888 329 2136</p>
+            <p class="text-slate-500 text-sm">Mon–Fri, 9am–7pm</p>
           </div>
           <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
             <h3 class="font-semibold text-slate-900">Email</h3>
