hero-title-updated

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <span class="rounded-full bg-white/10 px-3 py-1 text-xs sm:text-sm backdrop-blur">Smart • Safe</span>
             <span class="rounded-full bg-white/10 px-3 py-1 text-xs sm:text-sm backdrop-blur">24/7 Monitoring</span>
           </div>
-          <h1 id="hero-title" class="text-4xl sm:text-5xl lg:text-6xl font-black leading-tight">Smart, Safe <br class="hidden sm:block" />Home Security</h1>
+          <h1 id="hero-title" class="text-4xl sm:text-5xl lg:text-6xl font-black leading-tight">Smart Alarms <br class="hidden sm:block" />Home Security</h1>
           <p class="mt-5 max-w-xl text-base sm:text-lg text-white/90">Keep your home protected and connected with our easy app, pro monitoring, and ID theft protection.</p>
           <div class="mt-7 flex flex-col gap-3 sm:flex-row">
             <a href="#cta" class="btn btn-magic rounded-xl bg-accent px-6 py-4 text-base sm:text-lg font-semibold text-white shadow-soft" aria-label="Get started with Smart Alarms">Get Started</a>
