--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
           </div>
           <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
             <h3 class="font-semibold text-slate-900">Email</h3>
-            <p class="text-slate-700 mt-1">hello@smartalarms.example</p>
+            <p class="text-slate-700 mt-1"> sales@smartalarmsllc.com </p>
             <p class="text-slate-500 text-sm">We reply within one business day.</p>
           </div>
           <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
