--- a/contact.html
+++ b/contact.html
@@ -141,6 +141,19 @@
       <!-- Grid -->
       <section class="grid lg:grid-cols-3 gap-8">
         <!-- Form -->
+        <script>
+  const scriptURL = 'YOUR_GOOGLE_SCRIPT_URL_HERE';
+  const form = document.querySelector('form');
+
+  form.addEventListener('submit', e => {
+    e.preventDefault();
+    fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+      .then(response => alert('✅ Message sent successfully!'))
+      .catch(error => alert('❌ Error: ' + error.message));
+    form.reset();
+  });
+</script>
+
         <div class="lg:col-span-2 rounded-3xl bg-white border border-slate-200 p-6 lg:p-8 shadow-card">
           <form class="grid grid-cols-1 sm:grid-cols-2 gap-5">
             <div>
