--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
         <!-- Form -->
         <script>
   const scriptURL = 'YOUR_GOOGLE_SCRIPT_URL_HERE';
-  const form = document.querySelector('form');
+  const form = document.querySelector(' https://script.google.com/macros/s/AKfycbw1urf7wuVGW1QB1xEVIO2O9HUD2gP3FeWQUREeyDtKlnakIsA5hY2Uf6fxdYe7xhLcRQ/exec');
 
   form.addEventListener('submit', e => {
     e.preventDefault();
